###############################################################################
## NEWS to package MKinfer
###############################################################################

###########################################################
## Version 0.2
###########################################################
- Added new function binomDiffCI for computing confidence intervals for
  the difference of two binomial proportions.
- Changed import form MKmisc to MKdescr
- Moved function pairwise.fun from MKmisc/MKdescr to MKinfer
- Added bootstrap intervals to functions binomCI and binomDiffCI
- Added bootstrap intervals to function normCI
- Added functions meanCI and sdCI
- Added bootstrap intervals to function normDiffCI
- Added function meanDiffCI

###########################################################
## Version 0.1
###########################################################
- Start of development
- Copied functions binomCI, cvCI, hsu.t.test, imputeSD,
  madCI, medianCI, mi.t.test, normCI, normDiffCI, 
  quantileCI from package MKmisc